# Ai-model

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: character_bible.example.json  prompt_templates.example.json  settings.example.yaml  wardrobe.example.json
cron/: daily_pipeline.cron
data/character_identity/: character_identity_profile.example.json
data/samples/: content_history.sample.json  daily_calendar.sample.json
docs/: behavioral_engine.md  identity_pack_mapping.md  vps_deploy.md
scripts/: bootstrap_google_sheet.py  bootstrap_identity_pack.py  expand_identity_pack.py  telegram_polling.py
src/virtual_persona/config/: settings.py
src/virtual_persona/delivery/: formatter.py  publishing_formatter.py  publishing_plan_normalizer.py  telegram_bot.py  telegram_delivery_service.py  telegram_navigation.py
src/virtual_persona/llm/: provider.py
tests/: test_asset_evolution.py  test_behavior_content_flow.py  test_behavioral_logic_engine.py  test_bootstrap_google_sheet.py  test_continuity.py  test_daily_scheduler_service.py  test_expansion_brains.py  test_google_state_store.py  test_identity_pipeline_v4.py  test_life_expansion_engines.py  test_life_narrative_engine.py  test_orchestrator_idempotency.py  test_outfit_generator.py  test_prompt_evolution.py  test_publishing_plan_engine.py  test_scene_moment_engine.py  test_telegram_delivery_service.py  test_telegram_navigation.py  test_telegram_polling.py  test_telegram_polling_missing_plan.py  test_time_utils.py  test_wardrobe.py  test_weather.py
(+34 files in other folders)
